--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
+    <string name="button_start">Start Quiz</string>
+    <string name="button_true">True</string>
+    <string name="button_false">False</string>
+    <string name="question_text">A is the capital of Australia</string>
 </resources>
