--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="button_cheat">Cheat?</string>
     <string name="button_yesCheat">Yes, cheat.</string>
     <string name="button_noCheat">Go back.</string>
+    <string name="button_exit">Exit</string>
 
     <string name="cheat_true">The answer is True</string>
     <string name="cheat_false">The answer is False</string>
@@ -24,6 +25,7 @@
     <string name="q_oceans">There are 6 named oceans of the world</string>
     <string name="q_aus2">Australia has 4 timezones</string>
 
+    <string name="title_complete">You\'ve finished all the questions!</string>
 
 
 </resources>
